# THE_manipulation_ros2

./: .gitignore  .gitmodules  README.md  compose.yaml
Dockerfiles/: Dockerfile
src/the_interfaces/: CMakeLists.txt  package.xml
src/the_interfaces/srv/: MoveTo.srv
src/the_mtc_planner/: CMakeLists.txt  package.xml
src/the_mtc_planner/config/: kinematics.yaml  ompl_planning.yaml  the_calibrator.yaml  ur_softclaw_controllers.yaml
src/the_mtc_planner/include/the_mtc_planner/: calib_task_planner.hpp  the_planner.hpp
src/the_mtc_planner/launch/: test_mg_int.launch.py  the_mgi_ext_calib.launch.py  the_mtc_ext_calib.launch.py  the_mtc_ur_softclaw.launch.py  the_mtc_ur_softclaw_sim.launch.py
src/the_mtc_planner/rviz/: ext_calib_visual_conf.rviz  mg_int_view.rviz  visual_config.rviz
src/the_mtc_planner/src/: calib_mgi_planner.cpp  calib_task_planner.cpp  calib_task_planner_node.cpp  mg_int_test.cpp  the_planner.cpp
src/ur_softclaw_bringup/: CMakeLists.txt  package.xml
src/ur_softclaw_bringup/config/: cm_params.yaml  ur_softclaw_controllers.yaml
src/ur_softclaw_bringup/launch/: ur_softclaw_bringup.launch.py
src/ur_softclaw_moveit/: CMakeLists.txt  package.xml
src/ur_softclaw_moveit/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur_softclaw_controllers.yaml  ur_softclaw_controllers_sim.yaml
src/ur_softclaw_moveit/launch/: moveit_builder.launch.py  moveit_builder_sim.launch.py  ur_moveit.launch.py  ur_softclaw_moveit.launch.py  ur_softclaw_moveit_builder.launch.py
src/ur_softclaw_moveit/rviz/: view_robot.rviz
src/ur_softclaw_moveit/srdf/: softclaw.srdf.xacro  ur.srdf.xacro  ur_macro.srdf.xacro  ur_softclaw.srdf.xacro
src/ur_softclaw_moveit/urdf/: ur_softclaw.urdf.xacro
ur_config/ur10e/: kin_conf.yaml
